kubernetes/yamls/api-gateway/konga/ingress-notls.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: konga-notls
  namespace: konga
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: konga.eventyay.com
    http:
      paths:
      - path: /
        backend:
          serviceName: konga
          servicePort: 1337
