kubernetes/yamls/api-gateway/konga/ingress-tls.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: konga
  namespace: konga
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - konga.eventyay.com
    secretName: eventyay-konga-tls
  rules:
  - host: konga.eventyay.com
    http:
      paths:
      - path: /
        backend:
          serviceName: konga
          servicePort: 1337
